[workspace]
resolver = "2"
members = ["ccsds-cmd", "ccsds-lib", "ccsds-py"]
default-members = ["ccsds-cmd", "ccsds-lib"]

[workspace.package]
version = "0.1.0-beta.20"
edition = "2021"
authors = ["Bruce Flynn <brucef@ssec.wisc.edu>"]
repository = "https://github.com/bmflynn/ccsds-rs"
keywords = ["ccsds", "spacepacket", "framing", "cadu"]
categories = ["aerospace::space-protocols"]
license-file = "LICENSE.txt"

[workspace.dependencies]
serde = "1.0"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
spacecrafts = "0.1.0-beta.4"
hifitime = "4.0.0"
pyo3 = { version = "^0.22.0" }
