[workspace]
resolver = "2"
members = ["ccsds-cmd", "ccsds-lib", "ccsds-py"]
default-members = ["ccsds-cmd", "ccsds-lib"]

[workspace.package]
version = "0.1.0-beta.25"
edition = "2021"
authors = ["Bruce Flynn <brucef@ssec.wisc.edu>"]
repository = "https://github.com/bmflynn/ccsds-rs"
keywords = ["ccsds", "spacepacket", "framing", "cadu"]
categories = ["aerospace::space-protocols"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11.17"
tracing = "0.1"
tracing-subscriber = "0.3"
spacecrafts = "0.1.0-beta.5"
hifitime = "4.0.0"
pyo3 = { version = "^0.25.0" }
crc = "3.2.1"

