[package]
name = "ccsds-cmd"
description = "CCSDS spacecraft data stream decoding CLI tool"
edition.workspace = true
version.workspace = true
authors.workspace = true
keywords.workspace = true 
categories.workspace = true
license-file.workspace = true
repository.workspace = true

[[bin]]
name = "ccsds"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
ccsds = { path = "../ccsds-lib" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
spacecrafts.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
handlebars = "6"
regex = "1.10.5"
hifitime.workspace = true
