[package]
name = "ccsds-py"
edition.workspace = true
version.workspace = true
authors.workspace = true
keywords.workspace = true 
categories.workspace = true
license-file.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ccsds"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.1", features = ["extension-module", "abi3-py39"] }
ccsds = { path = "../ccsds-lib", features=["python"]}
spacecrafts = "^0.1.0-beta.3"
url = "2.5.4"
