[package]
name = "ccsds-py"
edition.workspace = true
authors.workspace = true
keywords.workspace = true 
categories.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ccsds"
crate-type = ["cdylib"]

[dependencies]
hifitime = {workspace = true, features=["python"]}
pyo3 = {workspace = true }
ccsds = { path = "../ccsds-lib", features=["python", "merge", "timecode"]}
spacecrafts = "^0.1.0-beta.3"
url = "2.5.4"
