[package]
name = "ccsds-cli"
description = "CCSDS spacecraft data stream decoding CLI tool"
edition.workspace = true
version.workspace = true
authors.workspace = true
keywords.workspace = true 
categories.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
ccsds = { path = "../lib" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
handlebars = "3"
chrono = "0.4.38"
